2008-08-18  Badlop  <badlop@process-one.net>

	* src/mod_register.erl: Change password using mod_register always
	returns success regardless of real result (EJAB-723)
	* src/ejabberd_auth.erl: Likewise
	* src/ejabberd_auth_external.erl: Likewise
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise

2008-08-18  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/node_dispatch.erl: Fix call to unexported function
	nodetree_default:get_subnodes/2

2008-08-17  Badlop  <badlop@process-one.net>

	* contrib/extract_translations/extract_translations.erl: Use
	Gettext PO for translators, export to ejabberd MSG (EJAB-648)
	* contrib/extract_translations/prepare-translation.sh: Likewise
	* doc/guide.tex: Likewise
	* doc/guide.html: Likewise
	* src/Makefile.in: New option 'make translations'
	* src/msgs/ejabberd.pot: Template translation file
	* src/msgs/*.po: Generated from old MSG files
	* src/msgs/*.msg: Automatic exported from PO files

2008-08-16  Badlop  <badlop@process-one.net>

	* src/msgs/sv.msg: Fixed formatting typos

	* src/gen_mod.erl: Export stop_module_keep_config/2 (EJAB-706)

2008-08-13  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Explain that LDAP is read-only storage (thanks to
	Evgeniy Khramtsov)
	* doc/guide.html: Likewise

2008-08-10  Badlop  <badlop@process-one.net>

	* src/msgs/eo.msg: Updated (thanks to Andreas van Cranenburgh)
	* src/msgs/nl.msg: Updated (thanks to Andreas van Cranenburgh)
	* src/msgs/sk.msg: Updated (thanks to Marek Becka)
	* src/msgs/sv.msg: Updated (thanks to Thore Alstromer and Heysan)

2008-08-09  Badlop  <badlop@process-one.net>

	* src/ejabberd_service.erl: Fix XEP-0114 compliance: define xmlns
	in header of error response; include in response the JID of served
	component not server (thanks to Sergei Golovan)(EJAB-717)

2008-08-04  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/odbc/ejabberd_odbc.erl: Restart the database connection when