@@ -2828,26 +2828,38 @@ Options:
   include the embedded CSS code. With the latter, you can specify the URL of the
   custom CSS file (for example: `http://example.com/my.css'). The default value
   is \term{false}.
+\titem{dirname}\ind{options!dirname}
+  Allows to configure the name of the room directory.
+  Allowed values are \term{room\_jid} and \term{room\_name}.
+  With the first value, the room directory name will be the full room JID.
+  With the latter, the room directory name will be only the room name,
+  not including the MUC service name.
+  The default value is \term{room\_jid}.
 \titem{dirtype}\ind{options!dirtype}
   The type of the created directories can be specified with this option. Allowed
   values are \term{subdirs} and \term{plain}. With the first value,
   subdirectories are created for each year and month. With the latter, the
   names of the log files contain the full date, and there are no subdirectories.
   The default value is \term{subdirs}.
+\titem{file\_format}\ind{options!file\_format}
+  Define the format of the log files:
+  \term{html} stores in HTML format,
+  \term{plaintext} stores in plain text.
+  The default value is \term{html}.
 \titem{outdir}\ind{options!outdir}
   This option sets the full path to the directory in which the HTML files should
   be stored. Make sure the \ejabberd{} daemon user has write access on that
   directory. The default value is \term{"www/muc"}.
-\titem{timezone}\ind{options!timezone}
-  The time zone for the logs is configurable with this option. Allowed values
-  are \term{local} and \term{universal}. With the first value, the local time,
-  as reported to Erlang by the operating system, will be used. With the latter,
-  GMT/UTC time will be used. The default value is \term{local}.
 \titem{spam\_prevention}\ind{options!spam\_prevention}
   To prevent spam, the \term{spam\_prevention} option adds a special attribute
   to links that prevent their indexation by search engines. The default value
   is \term{true}, which mean that nofollow attributes will be added to user
   submitted links. 
+\titem{timezone}\ind{options!timezone}
+  The time zone for the logs is configurable with this option. Allowed values
+  are \term{local} and \term{universal}. With the first value, the local time,
+  as reported to Erlang by the operating system, will be used. With the latter,
+  GMT/UTC time will be used. The default value is \term{local}.
 \titem{top\_link}\ind{options!top\_link}
   With this option you can customize the link on the top right corner of each
   log file. The syntax of this option is \term{\{"URL", "Text"\}}. The default
@@ -2872,6 +2884,7 @@ Examples:
                  {access_log, muc},
                  {cssfile, "http://example.com/my.css"},
                  {dirtype, plain},
+                 {dirname, room_jid},
                  {outdir, "/var/www/muclogs"},
                  {timezone, universal},
                  {spam_prevention, true},
